Created the layer application. Implemented create a question in the controller

--- a/DevQuestions/src/DevQuestions.Presenters/DevQuestions.Presenters.csproj
+++ b/DevQuestions/src/DevQuestions.Presenters/DevQuestions.Presenters.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\DevQuestions.Application\DevQuestions.Application.csproj" />
       <ProjectReference Include="..\DevQuestions.Contracts\DevQuestions.Contracts.csproj" />
       <ProjectReference Include="..\DevQuestions.Domain\DevQuestions.Domain.csproj" />
     </ItemGroup>
